update logstash config

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,11 @@
 input {
-	tcp {
-		port => 5000
-	}
+	mongodb {
+    uri => 'mongodb://10.0.0.30/my-logs?ssl=true'
+    placeholder_db_dir => '/Users/trungthanh/elk/logstash-db'
+    placeholder_db_name => 'logstash_auth.db'
+    collection => 'users'
+    batch_size => 5000
+  }
 }
 
 ## Add your filters / logstash plugins configuration here
