update mongo url string

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
 	mongodb {
-    uri => 'mongodb://10.0.0.30/my-logs?ssl=true'
+    uri => 'mongodb://auth:tb9qhTG3z5EB7de@103.69.193.170:27020/auth'
     placeholder_db_dir => '/Users/trungthanh/elk/logstash-db'
     placeholder_db_name => 'logstash_auth.db'
     collection => 'users'
